tests/lang/errors/undefined_name.hawk
//! spec: scoping.md
//! mode: check

fn main() -> Int {
    return missing;              // expect error: undefined name
}
